--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serve src/"
+    "start": "serve src/",
+    "sass": "sass",
+    "sass-watch": "sass --watch src/styles/styles.scss src/styles/styles.css"
   },
   "author": "",
   "license": "ISC",
