--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "src",
+  "name": "Tzedeka",
   "version": "1.0.0",
-  "description": "",
+  "description": "customer dashboard",
   "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
